♿️ fix keyboard nav for dark mode toggle

--- a/src/front-end/styles/index.less
+++ b/src/front-end/styles/index.less
@@ -28,7 +28,7 @@ body.dark-mode {
 	--color-outline: #fff;
 }
 
-::marker {
+:is(ol, summary, ul)::marker {
 	color: var(--color-fg-subtle);
 }
 
